# DDD-playground

./: .gitignore  LICENSE
ai-agent/: pyproject.toml
ai-agent/resources/: config.yaml
ai-agent/src/: container.py  main.py
ai-agent/src/application/handle_message/: handle_message_command.py  handle_message_command_handler.py  handle_message_command_result.py
ai-agent/src/application/set_system_prompt/: set_system_prompt_command.py  set_system_prompt_command_handler.py
ai-agent/src/config/: __init__.py  base.py  config.py
ai-agent/src/domain/agent/: agent.py  errors.py  system_prompt.py  system_prompt_repository.py
ai-agent/src/domain/session/: errors.py  session.py  session_id.py  session_repository.py
ai-agent/src/domain/session/message/: assistant_message.py  errors.py  message.py  message_content.py  user_message.py
ai-agent/src/infrastructure/adapters/agent/ollama/: ollama_agent.py  ollama_mapper.py
ai-agent/src/infrastructure/controllers/http/: health_check_controller.py
ai-agent/src/infrastructure/controllers/http/messages/: message_controller.py  requests.py  (+1 more)
ai-agent/src/infrastructure/errors/http/: errors.py
ai-agent/src/infrastructure/persistence/redis/: redis_client.py
ai-agent/tests/domain/session/: test_session_id.py
ai-agent/tests/unit/application/handle_message/: test_handle_message_command_handler.py
ai-agent/tests/unit/application/set_system_prompt/: test_set_system_prompt_command_handler.py
ai-agent/tests/unit/domain/agent/: test_system_prompt.py
ai-agent/tests/unit/domain/session/: test_session.py  test_session_id.py
(+16 files in other folders)
